# CoBBl

./: .gitignore  README.md  graph_compact_cert.py  output  plotter.py  run_compact_cert.sh  run_compact_cert_opt.sh  setup.sh  test_jolt.sh  tester.py
Spartan/: .gitignore  Cargo.toml
Spartan/src/: lib.rs
Spartan/src/scalar/: mod.rs
bitvec/: Cargo.toml
circ_baseline/: Cargo.toml
circ_baseline/circ_opt/src/: lib.rs
circ_baseline/examples/: circ.rs
circ_baseline/src/circify/: mod.rs
circ_blocks/: Cargo.toml
circ_blocks/examples/: zxc.rs  zxi.rs
circ_blocks/src/circify/: mem.rs  mod.rs
circ_blocks/src/front/: mod.rs
curve25519-dalek/: Cargo.toml
docs/: spartan_parallel.md
ff/: Cargo.toml
jolt/examples/multi-function/guest/: Cargo.toml
jolt/examples/multi-function/guest/src/: lib.rs
radium/: Cargo.toml
spartan_parallel/examples/: interface.rs
spartan_parallel/src/: custom_dense_mlpoly.rs  dense_mlpoly.rs  instance.rs  lib.rs  r1csinstance.rs  r1csproof.rs  sparse_mlpoly.rs  sumcheck.rs  unipoly.rs
spartan_parallel/src/nizk/: mod.rs
spartan_parallel/src/scalar/: mod.rs
spartan_parallel/writeups/: proofs_overview.md
zok_tests/benchmarks/benchmarks/: dna_align.zok  dna_align_cobbl.input  find_min.zok  sha256.zok  (+9 more)
zok_tests/compact_cert_field/: opt  output
zok_tests/raw/: dna_align.raw  dna_align_result.raw  find_min.raw  find_min_result.raw  jolt_result.raw  kmp_search.raw  kmp_search_result.raw  mat_mult.raw  mat_mult_result.raw  poseidon.raw  poseidon_result.raw  rle_codec.raw  rle_codec_result.raw  sha256.raw  sha256_result.raw
(+62 files in other folders)
