[package]
name = "multi-function-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", path = "../../../jolt-sdk" }
ff = { path = "../../../../ff", features = ["derive"] }
rs_sha256 = "0.1"
serde = { version = "1.0.*", default-features = false }